--- a/SCME.WpfControlLibrary/DataTemplates/ProfileHierarchicalDataTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/ProfileHierarchicalDataTemplate.xaml
@@ -4,24 +4,17 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:convertes="clr-namespace:SCME.WpfControlLibrary.IValueConverters"
+             xmlns:VM="clr-namespace:SCME.WpfControlLibrary.ViewModels"
              mc:Ignorable="d" d:DesignHeight="50" d:DesignWidth="200">
-    <UserControl.Resources>
-        <convertes:TryBooleanToVisibilityInverseConverter x:Key="B2VI" />
-    </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
         <TextBlock Grid.Column="0" Grid.Row="0" Text="{Binding Name}"/>
-        <Grid Grid.Column="1" Grid.Row="0" Visibility="{Binding IsTop, Converter={StaticResource B2VI}}">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto"/>
-                <ColumnDefinition Width="auto"/>
-            </Grid.ColumnDefinitions>
-            <TextBlock Grid.Column="0" Grid.Row="0" Text="{Binding Version}" />
-            <TextBlock Margin="5,0,0,0" Grid.Column="1" Grid.Row="0" Text="{Binding Timestamp, StringFormat=hh:mm:ss dd-MM-yyyy}"/>
-        </Grid>
+        <TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding Version}"  Margin="{x:Static VM:ResourceBinding.MarginLeft05}"/>
+            <TextBlock Grid.Column="2" Grid.Row="0" Text="{Binding Timestamp, StringFormat=hh:mm:ss dd-MM-yyyy}" TextWrapping="Wrap"  Margin="{x:Static VM:ResourceBinding.MarginLeft05}" HorizontalAlignment="Right"/>
 
     </Grid>
 </UserControl>
