--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/BVTDataTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/BVTDataTemplate.xaml
@@ -6,13 +6,6 @@
              xmlns:res="clr-namespace:SCME.WpfControlLibrary.Properties"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <UserControl.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/Common.xaml" />
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-    </UserControl.Resources>
     <Grid  >
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto" />
@@ -30,30 +23,30 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Column="0" Grid.Row="0" Text="{x:Static res:Resources.TestType}" /> 
-        <TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding TestType, Converter={StaticResource BT2S},  UpdateSourceTrigger=PropertyChanged}" />
-        <TextBlock Grid.Column="3" Grid.Row="0" Text="{x:Static res:Resources.CurrentLimit_mA}" />
-        <TextBlock Grid.Column="4" Grid.Row="0" Text="{Binding CurrentLimit }" />
+        <Label Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.TestType}" /> 
+        <Label Grid.Column="1" Grid.Row="0" Content="{Binding TestType, Converter={StaticResource BT2S},  UpdateSourceTrigger=PropertyChanged}" />
+        <Label Grid.Column="2" Grid.Row="0" Content="{x:Static res:Resources.CurrentLimit_mA}" />
+        <Label Grid.Column="3" Grid.Row="0" Content="{Binding CurrentLimit }" />
 
-        <TextBlock Grid.Column="0" Grid.Row="1" Text="{x:Static res:Resources.VoltageLimitD_V}" Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
-        <TextBlock Grid.Column="1" Grid.Row="1" Text="{Binding VoltageLimitD }" Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
-        <TextBlock Grid.Column="2" Grid.Row="1" Text="{x:Static res:Resources.VoltageLimitR_V}" Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
-        <TextBlock Grid.Column="3" Grid.Row="1" Text="{Binding VoltageLimitR}" Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
+        <Label Grid.Column="0" Grid.Row="1" Content="{x:Static res:Resources.VoltageLimitD_V}" Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
+        <Label Grid.Column="1" Grid.Row="1" Content="{Binding VoltageLimitD }" Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
+        <Label Grid.Column="2" Grid.Row="1" Content="{x:Static res:Resources.VoltageLimitR_V}" Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
+        <Label Grid.Column="3" Grid.Row="1" Content="{Binding VoltageLimitR}" Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
 
-        <TextBlock Grid.Column="0" Grid.Row="2" Text="{x:Static res:Resources.PlateTime_ms}" />
-        <TextBlock Grid.Column="1" Grid.Row="2" Text="{Binding PlateTime}" />
-        <TextBlock Grid.Column="2" Grid.Row="2" Text="{x:Static res:Resources.Rampup_Vms}" />
-        <TextBlock Grid.Column="3" Grid.Row="2" Text="{Binding RampUpVoltage}" />
+        <Label Grid.Column="0" Grid.Row="2" Content="{x:Static res:Resources.PlateTime_ms}" />
+        <Label Grid.Column="1" Grid.Row="2" Content="{Binding PlateTime}" />
+        <Label Grid.Column="2" Grid.Row="2" Content="{x:Static res:Resources.Rampup_Vms}" />
+        <Label Grid.Column="3" Grid.Row="2" Content="{Binding RampUpVoltage}" />
 
-        <TextBlock Grid.Column="0" Grid.Row="3" Text="{x:Static res:Resources.StartVoltage_V}" />
-        <TextBlock Grid.Column="1" Grid.Row="3" Text="{Binding StartVoltage}" />
-        <TextBlock Grid.Column="2" Grid.Row="3" Text="{x:Static res:Resources.Frequency_Hz}" />
-        <TextBlock Grid.Column="3" Grid.Row="3" Text="{Binding VoltageFrequency}" />
+        <Label Grid.Column="0" Grid.Row="3" Content="{x:Static res:Resources.StartVoltage_V}" />
+        <Label Grid.Column="1" Grid.Row="3" Content="{Binding StartVoltage}" />
+        <Label Grid.Column="2" Grid.Row="3" Content="{x:Static res:Resources.Frequency_Hz}" />
+        <Label Grid.Column="3" Grid.Row="3" Content="{Binding VoltageFrequency}" />
 
-        <TextBlock Grid.Column="0" Grid.Row="4" Text="{x:Static res:Resources.FreqRate_Hz}" />
-        <TextBlock Grid.Column="1" Grid.Row="4" Text="{Binding FrequencyDivisor, Converter={StaticResource FD2F}}" />
-        <TextBlock Grid.Column="2" Grid.Row="4" Text="{x:Static res:Resources.Mode}" />
-        <TextBlock Grid.Column="3" Grid.Row="4" Text="{Binding MeasurementMode}" />
+        <Label Grid.Column="0" Grid.Row="4" Content="{x:Static res:Resources.FreqRate_Hz}" />
+        <Label Grid.Column="1" Grid.Row="4" Content="{Binding FrequencyDivisor, Converter={StaticResource FD2F}}" />
+        <Label Grid.Column="2" Grid.Row="4" Content="{x:Static res:Resources.Mode}" />
+        <Label Grid.Column="3" Grid.Row="4" Content="{Binding MeasurementMode}" />
 
         <Grid Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="4" Visibility="{Binding MeasurementMode, ConverterParameter=1, Converter={StaticResource MM2V}, UpdateSourceTrigger=PropertyChanged}">
             <Grid.ColumnDefinitions>
@@ -62,10 +55,10 @@
                 <ColumnDefinition Width="auto" />
                 <ColumnDefinition Width="1*" />
             </Grid.ColumnDefinitions>
-            <TextBlock Grid.Column="0" Grid.Row="0" Text="{x:Static res:Resources.MinVdrm_V}" Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
-            <TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding VDRM}" Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
-            <TextBlock Grid.Column="2" Grid.Row="0" Text="{x:Static res:Resources.MinVrrm_V}" Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
-            <TextBlock Grid.Column="3" Grid.Row="0" Text="{Binding VRRM}" Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
+            <Label Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.MinVdrm_V}" Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
+            <Label Grid.Column="1" Grid.Row="0" Content="{Binding VDRM}" Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
+            <Label Grid.Column="2" Grid.Row="0" Content="{x:Static res:Resources.MinVrrm_V}" Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
+            <Label Grid.Column="3" Grid.Row="0" Content="{Binding VRRM}" Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
         </Grid>
 
         <Grid Grid.Column="0" Grid.Row="6" Grid.ColumnSpan="4" Visibility="{Binding MeasurementMode, ConverterParameter=0, Converter={StaticResource MM2V}, UpdateSourceTrigger=PropertyChanged}">
@@ -75,10 +68,10 @@
                 <ColumnDefinition Width="auto" />
                 <ColumnDefinition Width="1*" />
             </Grid.ColumnDefinitions>
-            <TextBlock Grid.Column="0" Grid.Row="0" Text="{x:Static res:Resources.MaxIdrm_mA}" Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
-            <TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding IDRM, ElementName=profilesList}" Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
-            <TextBlock Grid.Column="2" Grid.Row="0" Text="{x:Static res:Resources.MaxIrrm_mA}" Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
-            <TextBlock Grid.Column="3" Grid.Row="0" Text="{Binding IRRM, ElementName=profilesList}" Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
+            <Label Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.MaxIdrm_mA}" Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
+            <Label Grid.Column="1" Grid.Row="0" Content="{Binding IDRM, ElementName=profilesList}" Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
+            <Label Grid.Column="2" Grid.Row="0" Content="{x:Static res:Resources.MaxIrrm_mA}" Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
+            <Label Grid.Column="3" Grid.Row="0" Content="{Binding IRRM, ElementName=profilesList}" Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
         </Grid>
 
     </Grid>
