--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/GateDataTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/GateDataTemplate.xaml
@@ -4,52 +4,44 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:res="clr-namespace:SCME.WpfControlLibrary.Properties"
-             xmlns:local="clr-namespace:SCME.WpfControlLibrary.DataTemplates.TestParameters"
+             xmlns:CustomControls="clr-namespace:SCME.WpfControlLibrary.CustomControls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <UserControl.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/Common.xaml" />
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-    </UserControl.Resources>
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto" />
-                <ColumnDefinition Width="1*" />
-                <ColumnDefinition Width="auto" />
-                <ColumnDefinition Width="1*" />
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="1*" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
 
-            <TextBlock Grid.Column="0" Grid.Row="0"  Visibility="{Binding IsCurrentEnabled, Converter={StaticResource B2V}}" Text="{x:Static res:Resources.PureVgt}" />
-            <Path Grid.Column="1" Grid.Row="0"  Data="M 0 1.5 L 1.5 3 L 3 0" StrokeThickness="1.5" Width="60" Visibility="{Binding IsCurrentEnabled, Converter={StaticResource B2V}}" Stretch="Uniform"  HorizontalAlignment="Right" />
-            <TextBlock Grid.Column="2" Grid.Row="0" Text="{x:Static res:Resources.HoldingCurrent}" Visibility="{Binding IsIhEnabled, Converter={StaticResource B2V}}" />
-            <Path Grid.Column="3" Grid.Row="0"  Data="M 0 1.5 L 1.5 3 L 3 0" StrokeThickness="1.5" Visibility="{Binding IsIhEnabled, Converter={StaticResource B2V}}" Stretch="Uniform"  HorizontalAlignment="Right" />
+        <CustomControls:CheckBox Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" IsChecked="{Binding IsCurrentEnabled}" Content="{x:Static res:Resources.PureVgt}"/>
+        <Label Grid.Column="2" Grid.Row="0" Content="{x:Static res:Resources.HoldingCurrent}" />
+        <CustomControls:CheckBox Grid.Column="3" Grid.Row="0" IsChecked="{Binding IsIhEnabled}"/>
 
-            <TextBlock Grid.Column="0" Grid.Row="1" Visibility="{Binding IsIhStrikeCurrentEnabled, Converter={StaticResource B2V}}" Text="{x:Static res:Resources.HoldingStrikeCurrent}" />
-            <Path Grid.Column="1" Grid.Row="1" Data="M 0 1.5 L 1.5 3 L 3 0" StrokeThickness="1.5"  Visibility="{Binding IsIhStrikeCurrentEnabled, Converter={StaticResource B2V}}" Stretch="Uniform"  HorizontalAlignment="Right" />
-            <TextBlock Grid.Column="2" Grid.Row="1"  Visibility="{Binding IsIlEnabled, Converter={StaticResource B2V}}" Text="{x:Static res:Resources.LatchingCurrent}" />
-            <Path Grid.Column="4" Grid.Row="1" Data="M 0 1.5 L 1.5 3 L 3 0" StrokeThickness="1.5" Visibility="{Binding IsIlEnabled, Converter={StaticResource B2V}}" Stretch="Uniform"  HorizontalAlignment="Right"  />
+        <Label Grid.Column="0" Grid.Row="1" Content="{x:Static res:Resources.HoldingStrikeCurrent}" />
+        <CustomControls:CheckBox Grid.Column="1" Grid.Row="1" IsChecked="{Binding IsIhStrikeCurrentEnabled}" />
+        <Label Grid.Column="2" Grid.Row="1"  Content="{x:Static res:Resources.LatchingCurrent}" />
+        <CustomControls:CheckBox Grid.Column="4" Grid.Row="1" IsChecked="{Binding IsIlEnabled}"  />
 
-            <TextBlock Grid.Column="0" Grid.Row="2" Text="{x:Static res:Resources.MaxResistance_Ohm}" />
-            <TextBlock Grid.Column="1" Grid.Row="2" Text="{Binding Resistance}" />
+        <Label Grid.Column="0" Grid.Row="2" Content="{x:Static res:Resources.MaxResistance_Ohm}" />
+        <CustomControls:SmartLabel Grid.Column="1" Grid.Row="2" Value="{Binding Resistance}" />
 
-            <TextBlock Grid.Column="0" Grid.Row="3" Text="{x:Static res:Resources.MaxIgt_mA}" />
-            <TextBlock Grid.Column="1" Grid.Row="3" Text="{Binding IGT }" />
-            <TextBlock Grid.Column="2" Grid.Row="3" Text="{x:Static res:Resources.MaxVgt_V}" />
-            <TextBlock Grid.Column="3" Grid.Row="3" Text="{Binding VGT }" />
+        <Label Grid.Column="0" Grid.Row="3" Content="{x:Static res:Resources.MaxIgt_mA}" />
+        <CustomControls:SmartLabel Grid.Column="1" Grid.Row="3" Value="{Binding IGT}"/>
+        <Label Grid.Column="2" Grid.Row="3" Content="{x:Static res:Resources.MaxVgt_V}" />
+        <CustomControls:SmartLabel Grid.Column="3" Grid.Row="3" Value="{Binding VGT }" />
 
-            <TextBlock Grid.Column="0" Grid.Row="4" Text="{x:Static res:Resources.MaxIh_mA}" />
-            <TextBlock Grid.Column="1" Grid.Row="4" Text="{Binding IH }" />
-            <TextBlock Grid.Column="2" Grid.Row="4" Text="{x:Static res:Resources.MaxIl_mA}" />
-            <TextBlock Grid.Column="3" Grid.Row="4" Text="{Binding IL}" />
-        </Grid>
+        <Label Grid.Column="0" Grid.Row="4" Content="{x:Static res:Resources.MaxIh_mA}" />
+        <CustomControls:SmartLabel Grid.Column="1" Grid.Row="4" Value="{Binding IH }" />
+        <Label Grid.Column="2" Grid.Row="4" Content="{x:Static res:Resources.MaxIl_mA}" />
+        <CustomControls:SmartLabel Grid.Column="3" Grid.Row="4" Value="{Binding IL}" />
+    </Grid>
 </UserControl>
