--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/VTMDataTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/VTMDataTemplate.xaml
@@ -6,13 +6,7 @@
              xmlns:res="clr-namespace:SCME.WpfControlLibrary.Properties"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <UserControl.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/Common.xaml" />
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-    </UserControl.Resources>
+   
     <Grid  >
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto" />
@@ -29,8 +23,8 @@
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Column="0" Grid.Row="0" Text="{x:Static res:Resources.Type}" />
-        <TextBlock Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2" Text="{Binding TestType, Converter={StaticResource VT2S}, UpdateSourceTrigger=PropertyChanged}" />
+        <Label Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.Type}" />
+        <Label Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2" Content="{Binding TestType, Converter={StaticResource VT2S}, UpdateSourceTrigger=PropertyChanged}" />
 
         <Grid Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="4" Visibility="{Binding TestType, ConverterParameter=0, Converter={StaticResource VT2V}, UpdateSourceTrigger=PropertyChanged}">
             <Grid.ColumnDefinitions>
@@ -46,18 +40,18 @@
                 <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
 
-            <TextBlock Grid.Column="0" Grid.Row="0" Text="{x:Static res:Resources.Current_A}" />
-            <TextBlock Grid.Column="1" Grid.Row="0"  Text="{Binding RampCurrent}" />
-            <TextBlock Grid.Column="2" Grid.Row="0" Text="{x:Static res:Resources.Time_us}" />
-            <TextBlock Grid.Column="3" Grid.Row="0"  Text="{Binding RampTime}" />
+            <Label Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.Current_A}" />
+            <Label Grid.Column="1" Grid.Row="0"  Content="{Binding RampCurrent}" />
+            <Label Grid.Column="2" Grid.Row="0" Content="{x:Static res:Resources.Time_us}" />
+            <Label Grid.Column="3" Grid.Row="0"  Content="{Binding RampTime}" />
 
-            <TextBlock Grid.Column="0" Grid.Row="1"   Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V}}" Text="{x:Static res:Resources.IsHeatEnabled}" />
+            <Label Grid.Column="0" Grid.Row="1"   Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V}}" Content="{x:Static res:Resources.IsHeatEnabled}" />
             <Path Grid.Column="1" Grid.Row="1" Data="M 0 1.5 L 1.5 3 L 3 0" StrokeThickness="1.5" Stretch="Uniform" Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V}}" />
             
-            <TextBlock Grid.Column="0" Grid.Row="2" Text="{x:Static res:Resources.HeatCurrent_A}" Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V} }" />
-            <TextBlock Grid.Column="1" Grid.Row="2"  Text="{Binding RampOpeningCurrent }" Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V} }" />
-            <TextBlock Grid.Column="3" Grid.Row="2" Text="{x:Static res:Resources.HeatTime_us}" Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V} }" />
-            <TextBlock Grid.Column="4" Grid.Row="2" Text="{Binding RampOpeningTime }" Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V} }" />
+            <Label Grid.Column="0" Grid.Row="2" Content="{x:Static res:Resources.HeatCurrent_A}" Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V} }" />
+            <Label Grid.Column="1" Grid.Row="2"  Content="{Binding RampOpeningCurrent }" Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V} }" />
+            <Label Grid.Column="3" Grid.Row="2" Content="{x:Static res:Resources.HeatTime_us}" Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V} }" />
+            <Label Grid.Column="4" Grid.Row="2" Content="{Binding RampOpeningTime }" Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V} }" />
         </Grid>
 
         <Grid Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="4" Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource VT2V}, UpdateSourceTrigger=PropertyChanged}">
@@ -69,10 +63,10 @@
                     <ColumnDefinition Width="1*" />
                 </Grid.ColumnDefinitions>
 
-                <TextBlock Grid.Column="0" Grid.Row="0" Text="{x:Static res:Resources.Current_A}" />
-                <TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding SinusCurrent}" />
-                <TextBlock Grid.Column="2" Grid.Row="0" Text="{x:Static res:Resources.Time_us}" />
-                <TextBlock Grid.Column="3" Grid.Row="0" Text="{Binding SinusTime }" />
+                <Label Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.Current_A}" />
+                <Label Grid.Column="1" Grid.Row="0" Content="{Binding SinusCurrent}" />
+                <Label Grid.Column="2" Grid.Row="0" Content="{x:Static res:Resources.Time_us}" />
+                <Label Grid.Column="3" Grid.Row="0" Content="{Binding SinusTime }" />
             </Grid>
         </Grid>
 
@@ -88,28 +82,28 @@
                     <RowDefinition Height="*" />
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Column="0" Grid.Row="0" Text="{x:Static res:Resources.Current_A}" />
-                <TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding CurveCurrent }" />
-                <TextBlock Grid.Column="2" Grid.Row="0" Text="{x:Static res:Resources.Time_us}" />
-                <TextBlock Grid.Column="3" Grid.Row="0" Text="{Binding CurveTime }" />
+                <Label Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.Current_A}" />
+                <Label Grid.Column="1" Grid.Row="0" Content="{Binding CurveCurrent }" />
+                <Label Grid.Column="2" Grid.Row="0" Content="{x:Static res:Resources.Time_us}" />
+                <Label Grid.Column="3" Grid.Row="0" Content="{Binding CurveTime }" />
 
-                <TextBlock Grid.Column="0" Grid.Row="1" Text="{x:Static res:Resources.CurveFactor}" />
-                <TextBlock Grid.Column="1" Grid.Row="1" Text="{Binding CurveFactor }" />
-                <TextBlock Grid.Column="2" Grid.Row="1" Text="{x:Static res:Resources.AdditionalTime_us}" />
-                <TextBlock Grid.Column="3" Grid.Row="1" Text="{Binding CurveAddTime }" />
+                <Label Grid.Column="0" Grid.Row="1" Content="{x:Static res:Resources.CurveFactor}" />
+                <Label Grid.Column="1" Grid.Row="1" Content="{Binding CurveFactor }" />
+                <Label Grid.Column="2" Grid.Row="1" Content="{x:Static res:Resources.AdditionalTime_us}" />
+                <Label Grid.Column="3" Grid.Row="1" Content="{Binding CurveAddTime }" />
             </Grid>
 
         </Grid>
 
-        <TextBlock Grid.Column="0" Grid.Row="4"  Visibility="{Binding UseFullScale, Converter={StaticResource B2V}}" Text="{x:Static res:Resources.UseFullScale}" />
+        <Label Grid.Column="0" Grid.Row="4"  Visibility="{Binding UseFullScale, Converter={StaticResource B2V}}" Content="{x:Static res:Resources.UseFullScale}" />
         <Path Grid.Column="1" Grid.Row="4" Data="M 0 1.5 L 1.5 3 L 3 0" StrokeThickness="1.5" Visibility="{Binding UseFullScale, Converter={StaticResource B2V}}" Stretch="Uniform"    />
-        <TextBlock Grid.Column="2" Grid.Row="4"  Visibility="{Binding UseLsqMethod, Converter={StaticResource B2V}}" Text="{x:Static res:Resources.UseLsqMethod}" />
+        <Label Grid.Column="2" Grid.Row="4"  Visibility="{Binding UseLsqMethod, Converter={StaticResource B2V}}" Content="{x:Static res:Resources.UseLsqMethod}" />
         <Path Grid.Column="3" Grid.Row="4" Data="M 0 1.5 L 1.5 3 L 3 0" StrokeThickness="1.5" Width="60" Visibility="{Binding UseLsqMethod, Converter={StaticResource B2V}}" Stretch="Uniform"    />
 
-        <TextBlock Grid.Column="0" Grid.Row="5" Text="{x:Static res:Resources.Count}" />
-        <TextBlock Grid.Column="1" Grid.Row="5" Text="{Binding Count }" />
-        <TextBlock Grid.Column="2" Grid.Row="5" Text="{x:Static res:Resources.MaxVtm_V}"/>
-        <TextBlock Grid.Column="3" Grid.Row="5" Text="{Binding VTM }" />
+        <Label Grid.Column="0" Grid.Row="5" Content="{x:Static res:Resources.Count}" />
+        <Label Grid.Column="1" Grid.Row="5" Content="{Binding Count }" />
+        <Label Grid.Column="2" Grid.Row="5" Content="{x:Static res:Resources.MaxVtm_V}"/>
+        <Label Grid.Column="3" Grid.Row="5" Content="{Binding VTM }" />
 
     </Grid>
 </UserControl>
